# tabularis

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SPONSORS.md  package.json  pnpm-lock.yaml
.agents/skills/tabularis-discord-release/: SKILL.md  template.json
plugins/: PLUGIN_GUIDE.md  manifest.schema.json  registry.json
src/: App.tsx  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  ai_activity.rs  ai_activity_tests.rs  commands.rs  config.rs  connection_cache.rs  connection_cache_tests.rs  credential_cache.rs  export.rs  k8s_tunnel.rs  keychain_utils.rs  lib.rs  models.rs  pool_manager.rs  pool_manager_tests.rs  results_window.rs
src-tauri/src/drivers/: common.rs  driver_trait.rs
src-tauri/src/drivers/common/: query.rs  sql_literals.rs  tests.rs
src-tauri/src/drivers/mysql/: helpers.rs  mod.rs  tests.rs
src-tauri/src/drivers/postgres/: binding.rs  explain.rs  helpers.rs  mod.rs  tests.rs
src-tauri/src/drivers/sqlite/: mod.rs  parser.rs  tests.rs
src-tauri/src/mcp/: mod.rs  preflight.rs
src-tauri/src/plugins/: driver.rs  manager.rs
src/components/modals/: ExplainSelectionModal.tsx  GenerateSQLModal.tsx  NewConnectionModal.tsx  QuerySelectionModal.tsx  QuickNavigatorModal.tsx
src/components/notebook/: CellSectionHeader.tsx  NotebookCellWrapper.tsx  NotebookView.tsx  ResultToolbar.tsx  SqlCell.tsx  SqlCellEditor.tsx  SqlCellResult.tsx
src/components/ui/: DataGrid.tsx  DataGridRow.tsx  EnumSelect.tsx  FieldEditor.tsx  RowEditorSidebar.tsx  SqlPreview.tsx
src/contexts/: DatabaseProvider.tsx
src/data/: changelog.ts
src/hooks/: useDrivers.ts  useSqlAutocompleteRegistration.ts
src/i18n/: config.ts
src/i18n/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ru.json  zh.json
src/pages/: Editor.tsx  ResultsWindowPage.tsx
src/types/: editor.ts  notebook.ts  plugins.ts  schema.ts
src/utils/: autocomplete.ts  notebookFile.ts  openSourceLibraries.ts  queryParameters.ts  resultsWindowSync.ts  sql.ts
src/utils/sqlSplitter/: classify.ts  index.ts  splitter.ts  tokenizer.ts
tests/components/modals/: NewConnectionModal.test.tsx
tests/components/ui/: EnumSelect.test.tsx  FieldEditor.test.tsx
tests/utils/: autocomplete.test.ts  notebookFile.test.ts  openSourceLibraries.test.ts  queryParameters.test.ts  resultsWindowSync.test.ts
tests/utils/sqlSplitter/: classify.test.ts  dialects.test.ts  splitter.test.ts  tokenizer.test.ts
