[package]
name = "tabularis"
version = "0.13.4"
description = "tabularis - A database manager for developers"
authors = ["Debba"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tabularis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.2", features = ["protocol-asset", "devtools"] }
tauri-plugin-log = "2"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "mysql", "postgres", "tls-native-tls", "chrono", "uuid", "rust_decimal", "json"] }
tokio = { version = "1.49.0", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.36", features = ["db-tokio-postgres", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
chrono-tz = "0.10"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-notification = "2"
russh = "0.43"
russh-keys = "0.43"
async-trait = "0.1"
urlencoding = "2.1.3"
base64 = "0.22.1"
infer = "0.16"
sha2 = "0.10"
futures = "0.3.31"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
tauri-plugin-opener = "2"
once_cell = "1.20"
csv = "1.4.0"
reqwest = { version = "0.13.1", features = ["json"] }
clap = { version = "4.5.56", features = ["derive"] }
directories = "6.0.0"
serde_yaml = "0.9.34"
sysinfo = { version = "0.32", features = ["system"] }
zip = "4.2.0"
tauri-plugin-clipboard-manager = "2"
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1", "array-impls"] }
deadpool-postgres = "0.14.1"
# rustls is used for the PostgreSQL deadpool TLS path. native-tls (used by
# sqlx and the MySQL pool) trips macOS Secure Transport's strict EKU checks
# on user-supplied root anchors (e.g. the AWS RDS bundle), so the Postgres
# pool routes through rustls + the platform verifier instead.
tokio-postgres-rustls = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
rustls-platform-verifier = "0.6"
notify = "6"
ulid = "1.2.1"

# GTK dependencies for Wayland window title workaround (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3.24.0"
filetime = "0.2"
